<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConnectHub</string>
    <string name="action_settings">Settings</string>
    <string name="action_scheduling">Scheduling</string>
    <string name="title_activity_coaching_corner">CoachingCornerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="pre_coaching_assessment">Pre-Coaching Assessment</string>
    <string name="field_coaching_form">Field Coaching Form</string>
    <string name="post_coaching_assessment">Post Coaching Assessment</string>
    <string name="save_form">Save</string>
    <string name="title_activity_in_call">InCallActivity</string>
    <string name="notification">Ongoing call</string>
    <string name="title_activity_view_reps">ViewReps</string>
    <string name="title_activity_party_chat">PartyChatActivity</string>
    <string name="video_on_off_menu">Turn video on/off</string>
    <string name="audio_on_off_menu">Turn audio on/off</string>
    <string name="messagebubble_menu">Show/Hide messages</string>
    <string name="action_share_document">Share a document</string>
    <string name="title_activity_assets">AssetsActivity</string>
    <string name="messaging">Messaging</string>

    <!-- Messaging -->
	<string name="send">Send</string>    
    <string name="hint">Type your message here</string>
    
    <!-- for InCall activity -->
    <string name="shared_document">Shared Document</string>
    <string name="Assessment">Assessment</string>
    <string name="Certification">Certification</string>

    <!-- for assets -->
    <string name="title_asset">Title</string>
    <string name="type_asset">Type</string>
    <string name="rating_asset">Rating</string>
    <string name="date_asset">Added</string>
    <string name="action_asset">Action</string>
    <string name="share_asset">Share</string>
    <string name="title_activity_pdfeditor">PDFEditorActivity</string>

    <!-- Strings for Login Activity -->
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login">login</string>

    <!-- Strings For Main Activity Screen -->
    <string name="pitch_practice_text">Pitch Practice</string>
    <string name="coaching_corner_text">Coaching Corner</string>
    <string name="certification_center_text">Certification Center</string>
    <string name="knowledge_center_text">Knowledge Center</string>
    <string name="performance_text">Performance/Reporting</string>
    <string name="group_chat_text">Group Chat</string>
    <string name="logout">Log Out</string>
    <string name="debug">debug</string>
    <string name="title_activity_knowledge_center">KnowledgeCenterActivity</string>
    <string name="approved_materials">Approved Materials</string>
    <string name="coaching_forms">Coaching Forms</string>
    <string name="library">Library</string>
    <string name="title_activity_saved_forms">SavedFormsActivity</string>
    <string name="title_activity_saved_form_viewer">SavedFormViewerActivity</string>
    <string name="title_activity_performance_reporting">PerformanceReportingActivity</string>
    <string name="title_activity_incall_form">IncallFormActivity</string>
    <string name="title_activity_test_chat">TestChat</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="pitch_practice_text_2">Pitch\nPractice</string>
    <string name="knowledge_center_text_2">Knowledge\nCenter</string>
    <string name="coaching_corner_text_2">Coaching\nCorner</string>
    <string name="group_chat_text_2">Conference\nRoom</string>
    <string name="coaching_forms_text_2">Coaching\nForms</string>
    <string name="approved_materials_text_2">Approved\nMaterials</string>

</resources>