<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.insitehub.saleready_android.AssetsActivity" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listView_assets"
        android:layout_alignStart="@+id/listView_assets"
        android:orientation="horizontal"
        android:weightSum="14" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="7"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_asset" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/type_asset" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rating_asset" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date_asset" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/action_asset" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView_assets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header" >
    </ListView>

</RelativeLayout>