<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="6"
    tools:context="com.insitehub.saleready_android.KnowledgeCenterActivity" >

    <GridView
        android:id="@+id/gridview_assigned_asset"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:numColumns="2"
        android:text="@string/hello_world" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/approvedMaterials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/btn_selling_skills"
            android:gravity="center_horizontal"
            android:text="@string/approved_materials"
           />

        <TextView
            android:id="@+id/coachingForms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/btn_product_information"
            android:gravity="center_horizontal"
            android:text="@string/coaching_forms" />

        <TextView
            android:id="@+id/library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/btn_market_knowledge"
            android:gravity="center_horizontal"
            android:text="@string/library" />

    </LinearLayout>

</LinearLayout>