<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="4" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/listview_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5" >

            <TextView
                android:id="@+id/preCoach_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/uncompleted_form"
                android:gravity="center_horizontal"
                android:text="@string/pre_coaching_assessment" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:src="@color/orange" />

            <TextView
                android:id="@+id/fieldCoach_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/uncompleted_form"
                android:gravity="center_horizontal"
                android:text="@string/field_coaching_form" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:src="@color/orange" />

            <TextView
                android:id="@+id/postCoach_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/uncompleted_form"
                android:gravity="center_horizontal"
                android:text="@string/post_coaching_assessment" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnSaveForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@color/orange"
                android:text="@string/save_form"
                android:visibility="invisible" />

            <ScrollView
                android:id="@+id/formContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btnSaveForm" >
            </ScrollView>

            <ProgressBar
                android:id="@+id/formLoadingSpinner"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>